@@ -1,5 +1,6 @@
 procps-3.1.6 --> procps-3.1.7
 
+watch: --help now explains -t, --no-title    #182246
 ps: warning directs users to the FAQ
 
 procps-3.1.5 --> procps-3.1.6
